# metabasic

./: .flake8  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  mypy.ini  pyproject.toml  tox.ini
.circleci/: config.yml
.github/workflows/: ci.yml
docs/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_modules/: index.html
docs/_modules/metabasic/: exceptions.html  metabasic.html
docs/_sources/: index.rst.txt
docs/_sources/metabasic/: metabasic.exceptions.rst.txt  metabasic.rst.txt
docs/_static/: alabaster.css
docs/metabasic/: metabasic.exceptions.html  metabasic.html  metabasic.metabasic.html  modules.html
metabasic/: __init__.py  exceptions.py  metabasic.py
sphinx/source/: conf.py  index.rst
sphinx/source/metabasic/: metabasic.metabasic.rst  metabasic.rst  modules.rst
tests/: metabasic_test.py
