[tool.poetry]
name = "metabasic"
version = "0.4.2"
description = "Dead simple client for interacting with the Metabase dataset API"
authors = ["Ben-Hu <benjqh@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Ben-Hu/metabasic"
repository = "https://github.com/Ben-Hu/metabasic"
documentation = "https://ben-hu.com/metabasic"
include = ["metabasic/py.typed"]

[tool.poetry.dependencies]
python = ">=3.6.1"
inquirer = "^2.6.3"
requests = "^2.22.0"
pandas = "^1.0.3"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.7.9"
isort = "^4.3.21"
mypy = "^0.770"
pytest = "^5.4.2"
pytest-cov = "^2.8.1"
pytest-mock = "^3.1.0"
sphinx = "^3.0.3"
tox = "^3.15.0"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
